expected/errors/missing-stage-as.err
error: invalid stage declaration: expected 'as' after stage name

  --> examples/errors/missing-stage-as.dsl:1:15
   1 | stage package build {
     |               ^^^^^
help: write `stage <name> as build|test|image { ... }`
